--- a/app/views/management/_payment_modes_form.html.haml
+++ b/app/views/management/_payment_modes_form.html.haml
@@ -2,3 +2,4 @@
   -f.error :payment_mode
   -f.field :payment_mode, :name
   -f.field :payment_mode, :account_id, :choices=>@current_company.accounts.find(:all, :conditions=>{:deleted=>false}, :order=>:number).collect{|x| [x.label, x.id]},:options=>{:include_blank=>true}
+  -f.field :payment_mode, :mode,:field=>:radio, :choices=>PaymentMode.modes
