git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@603 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/purchases_products.html.haml
+++ b/app/views/management/purchases_products.html.haml
@@ -2,6 +2,8 @@
   - l.action :purchases
 
 %h2=tc :lines 
+.procedure 
+  =link_to tc('purchase_order_line_create'), :action=>:purchase_order_lines_create
 =dyta :purchase_order_lines
 
 
