--- a/app/views/management/products_display.html.haml
+++ b/app/views/management/products_display.html.haml
@@ -25,4 +25,9 @@
       =evalue @product, :without_stocks
 
 %h2=tc :prices
+.aclist
+  - if @product.to_sale
+    =link_to tc('sale_price_create'), :action=>:prices_create, :mode=>:sales,:product_id=>session[:product_id], :class=>'procedure create'
+  - if @product.to_purchase
+    =link_to tc('purchase_price_create'), :action=>:prices_create, :mode=>:purchases,:product_id=>session[:product_id], :class=>'procedure create'
 =dyta :product_prices
