--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -181,6 +181,7 @@ table.dyta tr.even td.sorted { background: #e4e7f9; } /*#FED; }*/
 table.dyta td.procedures { padding:4px; background: #FEB; }
 table.dyta td.procedures > a {padding: 4px;}
 table.dyta td.procedures > a.procedure.create {padding-left: 20px; background: url(../images/buttons/create.png) no-repeat center left;}
+table.dyta td.procedures > a.procedure.sort {padding-left: 20px; background: url(../images/buttons/sort.png) no-repeat center left;}
 table.dyta td.empty { text-align:center; color: #777; padding:4px; background: #EEF; }
 table.dyta th, table.dyta td.empty, table.dyta td.procedures { border-top: 1px solid #BACFE6; }
 table.dyta th, table.dyta td { border-left: 1px solid #BACFE6; border-right: 1px solid #BACFE6; }
@@ -190,6 +191,8 @@ table.dyta td.paginate div.pagination * { padding:2px 4px; }
 table.dyta td.paginate div.pagination span.current { font-weight:bold; color: black; }
 table.dyta td.paginate div.pagination span.disabled { color: #888; }
 table.dyta tr      td.decimal { text-align: right; }
+table.dyta tr      td.float   { text-align: right; }
+table.dyta tr      td.integer { text-align: right; }
 table.dyta tr      td.date { text-align: center; }
 table.dyta tr      td.web { text-align: center; }
 /*table.dyta th .sort { widths: 100%; }
