git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@637 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/_stocks_locations_form.html.haml
+++ b/app/views/management/_stocks_locations_form.html.haml
@@ -12,4 +12,4 @@
   - f.field :stock_location, :y
   - f.field :stock_location, :z
   - f.title :accountancy
-  - f.field :stock_location, :account_id, :choices=>@current_company.accounts.find(:all, :conditions=>['number LIKE ?','3%'], :order=>:number).collect{|x| [x.label, x.id]}, :options=>{:include_blank______=>true}
+  - f.field :stock_location, :account_id, :choices=>@current_company.accounts.find(:all, :conditions=>['number LIKE ?','3%'], :order=>:number).collect{|x| [x.label, x.id]}, :options=>{:include_blank_____=>true}
