--- a/app/views/accountancy/_entries.html.haml
+++ b/app/views/accountancy/_entries.html.haml
@@ -44,6 +44,5 @@
             %td=entry.account.number
             %td{:align=>"right"}=number_to_currency(entry.currency_debit, :delimiter=>"", :precision => 2, :unit=>"")
             %td{:align=>"right"}=number_to_currency(entry.currency_credit, :delimiter=>"", :precision => 2, :unit=>"")
-            %td.act=link_to tc(:update), :action => "entries_update", :id => entry.id
-            %td.act=link_to_remote tc(:delete), :url =>{:action => "entries", :id => entry.id}, :method=>:delete, :confirm=> tc(:confirm) 
-#test
+            %td.act=link_to image_tag('buttons/update.png', :border=>0), :action => "entries_update", :id => entry.id
+            %td.act=link_to_remote image_tag('buttons/delete.png', :border=>0), :url =>{:action => "entries", :id => entry.id}, :method=>:delete, :confirm=> tc(:confirm) 
