git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@663 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,5 +1,5 @@
 !!! XML utf-8
-!!! Strict
+!!! strict-svg
 %html{:xmlns=>'http://www.w3.org/1999/xhtml'}
   %head
     %meta{'http-equiv' => 'Content-Type', :content => 'text/html;charset=UTF-8'}
