--- a/app/views/management/sales_general.html.haml
+++ b/app/views/management/sales_general.html.haml
@@ -3,7 +3,7 @@
   =formalize do |f|
     - f.error 'sale_order'
     - f.title :client
-    - f.field :sale_order, :client_id, :choices=>@current_company.available_entities(:order=>:name).collect{|x| [x.full_name, x.id]}, :new=>{:controller=>:relations, :action=>:entities_create}, :options=>{:include_blank=>true}
+    - f.field :sale_order, :client_id, :choices=>@current_company.available_entities(:conditions=>{:client=>true}, :order=>:name).collect{|x| [x.full_name, x.id]}, :new=>{:controller=>:relations, :action=>:entities_create}
     - f.title :conditions
     - f.field :sale_order, :nature_id, :choices=>@current_company.sale_order_natures.collect{|x| [x.name, x.id]}
     - f.field :sale_order, :contact_id, :choices=>@contacts, :new=>{:controller=>:relations, :action=>:entities_contacts_create}
