git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@666 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/relations/entities_display.html.haml
+++ b/app/views/relations/entities_display.html.haml
@@ -14,6 +14,7 @@
       =evalue t('activerecord.attributes.entity.country'), image_tag("countries/"+@entity.country+".png")+" "+t("countries."+@entity.country) unless @entity.country.blank?
     -if @entity.client
       %td
+        =evalue @entity, :proposer, :label=>:full_name unless @entity.proposer_id.blank?
         =evalue @entity, :vat_number unless @entity.vat_number.blank?
         =evalue @entity, :vat_submissive
         =evalue @entity, :reflation_submissive 
