--- a/app/views/relations/_entities_form.html.haml
+++ b/app/views/relations/_entities_form.html.haml
@@ -22,7 +22,7 @@
 
 =formalize(:id=>:client_form) do |f|
   -f.title :client
-  -f.field :entity, :proposer_id, :choices=>Entity.find(:all, :conditions=>['company_id = ? AND id != ?', @current_company.id, @current_company.entity_id], :order=>:name).collect{|x| [x.full_name, x.id]}, :options=>{:include_blank=>true}
+  -f.field :entity, :proposer_id, :choices=>Entity.find(:all, :conditions=>['company_id = ? AND id NOT IN (?,?)', @current_company.id,(session[:current_entity]||0), @current_company.entity_id], :order=>:name).collect{|x| [x.full_name, x.id]}, :options=>{:include_blank=>true}
   -f.field :entity, :employee_id, :choices=>@current_company.employees.find(:all, :conditions=>{:commercial=>'true'}, :order=>:last_name).collect{|p| [p.last_name, p.id]}
   -f.field :entity, :vat_submissive
   -f.field :entity, :reflation_submissive
