--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -337,3 +337,7 @@ div.dyli_complete ul {position: fixed; border:1px solid #888; margin:0; padding:
 div.dyli_complete ul li {background-color:  #C9D7F1; margin:0; padding:3px;}
 div.dyli_complete ul li.selected {background-color: #B1D1F9;}
 div.dyli_complete ul strong.highlight {color: #800; margin:0; padding:0;}
+
+
+fieldset.itemize { border: 1px solid #777; -moz-border-radius: 8px; float: left; margin:8px;}
+fieldset.itemize legend { color: blue; margin: 0 8px; padding:2px;}
