--- a/app/views/production/index.html.haml
+++ b/app/views/production/index.html.haml
@@ -1,1 +1,5 @@
 =menu_index
+.aclist.indicator
+  %h2= tc('indicator')
+  %ul
+    %li= link_to tc('nb_operations', :count=>@shape_operations.size), :action=>:unvalidated_operations
