--- a/app/views/relations/_entities_form.html.haml
+++ b/app/views/relations/_entities_form.html.haml
@@ -21,10 +21,11 @@
     -f.field datum.complement.name, {:datatype=>datum.complement.nature.to_sym, :id=>"complement_datum_#{datum.complement_id}_value", :name=>"complement_datum[#{datum.complement_id}][value]", :value=>datum.value, :size=>datum.complement.length_max, :choices=>datum.complement.choices.collect{|x| [x.name , x.id]}  }
 
 =formalize(:id=>:client_form) do |f|
-  -f.title :client
-  - f.field :entity_meeting, :meeting_id, :choices=>@current_company.meetings.collect{|x| [x.name, x.id]}, :options=>{:include_blank=>"-- Aucun --"}
-  - f.field :entity_meeting, :meeting_id, :choices=>@current_company.meetings.collect{|x| [x.name, x.id]}, :options=>{:include_blank=>"-- Aucun --"}
-  -if @operation.to_s == "update"
+  - f.title :client
+  - f.field :entity, :origin_id, :choices=>@current_company.meeting_locations.find(:all, :conditions=>{:active=>false}).collect{|x| [x.name, x.id]}
+  - f.field :entity, :first_met_on
+  -# f.field name ,{:datatype=>:choice, :id=>"meeting_#{meeting.position}_meeting_id", :name=>"entity_meeting[#{entity_meeting.position}][meeting_id]", :value=>entity_meeting.meeting_id, :choices=>@current_company.meetings.find(:all, :conditions=>{:active=>true}).collect{|x| [x.name, x.id]}, :options=>{:include_blank=>"--Aucun--"} }
+  -if @operation == "update"
     -f.field :entity, :proposer_id, :choices=>@current_company.find(:all, :conditions=>[' id != ?', @entity.id||0], :order=>:name).collect{|x| [x.full_name, x.id]}, :options=>{:include_blank=>true}
   -else
     -f.field :entity, :proposer_id, :choices=>@current_company.available_entities.collect{|x| [x.full_name, x.id]}, :options=>{:include_blank=>true}
