--- a/app/views/management/stocks_locations.html.haml
+++ b/app/views/management/stocks_locations.html.haml
@@ -1,1 +1,4 @@
+.aclist
+  =link_to tc('stocks_locations_create'), :action=>:stocks_locations_create, :mode=>:original, :class=>'procedure create'
+  =link_to tc('reservoirs_create'), :action=>:stocks_locations_create, :mode=>:reservoir, :class=>'procedure_create'
 =dyta :stock_locations
