--- a/app/views/management/index.html.haml
+++ b/app/views/management/index.html.haml
@@ -3,6 +3,7 @@
   %ul
     %li= link_to tc('nb_sales', :count=>@deliveries.size), :action=>:undelivered_sales
     %li= link_to tc('nb_purchases', :count=>@purchases.size), :action=>:unreceived_purchases
+    %li= link_to tc('nb_transfers', :count=>@stock_transfers.size), :action=>:unexecuted_transfers
   - if @product_stocks.size > 0
     %h2= tc('low_stocks')
     .stocks 
