git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@692 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/production/productions.html.haml
+++ b/app/views/production/productions.html.haml
@@ -1,4 +1,4 @@
 %h2= tc('productions')
 .aclist
-  =link_to tc('productions_create'), :action=>:productions_create, :class=>'procedure create'
+  =link_to tc('productions_create'), {:action=>:productions_create}, :class=>'procedure create'
 =dyta :productions
