git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@693 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/production/shapes.html.haml
+++ b/app/views/production/shapes.html.haml
@@ -1,4 +1,4 @@
-%h2= tc 'shapes'
+<!-- %h2= tc 'shapes' -->
 .aclist
   = link_to tc('shapes_create'), :action=>:shapes_create, :class=>'procedure create'
 =dyta :shapes
