--- a/app/views/production/_productions_form.html.haml
+++ b/app/views/production/_productions_form.html.haml
@@ -2,10 +2,10 @@
   - f.error :production
   - f.title :infos
   - if !request.url.include? "update" 
-    - f.field :production, :product_id, :choices=>@productable_products.collect{|x| [x.informations.to_s, x.id]}
+    - f.field :production, :product_id, :choices=>@productable_products.collect{|x| [x.informations.to_s, x.id]}, :new=>{:controller=>:management, :action=>:products_create}
   - f.field :production, :quantity
   - if @current_company.stock_locations.size > 1
-    - f.field :production, :location_id, :choices=>@current_company.stock_locations.collect{|x| [x.name, x.id]}
+    - f.field :production, :location_id, :choices=>@current_company.stock_locations.collect{|x| [x.name, x.id]}, :new=>{:controller=>:management, :action=>:stocks_locations_create}
 
 - if !request.url.include? "update" 
   %p= tc('production_legend_one')
