git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@695 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/financialyears.html.haml
+++ b/app/views/accountancy/financialyears.html.haml
@@ -1,1 +1,3 @@
+.aclist
+  =link_to tc('financialyears_create'), {:action=>:financialyears_create}, :class=>'procedure create'
 =dyta(:financialyears)
