--- a/app/views/accountancy/_statements.html.haml
+++ b/app/views/accountancy/_statements.html.haml
@@ -1,5 +1,10 @@
-=@entry.inspect
-=javascript_tag("$('entry_number_"+@entry.id.to_s+"').innerHTML="+@entry.statement.id.to_s+";$('total_debit').innerHTML='"+@bank_account_statement.debit.to_s+"';$('total_credit').innerHTML='"+@bank_account_statement.credit.to_s+"';")
-
+- if @entry
+  - if @entry.statement.nil?
+    =javascript_tag("$('entry_number_"+@entry.id.to_s+"').innerHTML='&nbsp';")
+  - else
+    =javascript_tag("$('entry_number_"+@entry.id.to_s+"').innerHTML='"+link_to(@entry.statement.number, :action=>:statements_display, :id=>@entry.statement.id)+"';")
+  =javascript_tag("$('total_debit').innerHTML='"+@bank_account_statement.credit.to_s+"';$('total_credit').innerHTML='"+@bank_account_statement.debit.to_s+"';")
+ 
+  
 
   
