--- a/app/views/accountancy/entries.html.haml
+++ b/app/views/accountancy/entries.html.haml
@@ -2,8 +2,7 @@
   %h1=tc(:subtitle, :journal=>@journal.name, :financialyear=>@financialyear.code)
 - if @valid
   #update_params.aclist
-    %ul
-      %li=link_to_function tc(:update_params), "$('params').show(); $('update_params').hide();"
+    =link_to_function tc(:update_params), "$('params').show(); $('update_params').hide();", :class=> 'procedure create'
 #params.fore
   - form_tag(:action => :params_entries) do
     =formalize do |f|
