--- a/app/views/accountancy/statements.html.haml
+++ b/app/views/accountancy/statements.html.haml
@@ -1,11 +1,3 @@
-<!--  - if @bank_account_statements -->
+.aclist
+  =link_to tc('statements_create'), {:action=>:statements_create}, :class=>'procedure create'
 =dyta(:bank_account_statements)
-<!-- # - else -->
-<!--   =lc :list_of_statements -->
-<!--   - form_tag(:action => 'statements') do -->
-<!--     %table -->
-<!--       %tr -->
-<!--         %td.label=lc :select_bank_account -->
-<!--         %td.select=select "bank_account", "id",  @bank_accounts.collect{|j| [j.name, j.id]} -->
-<!--         %td.button=submit_tag 'ok', :html => {:tabindex => 2}    -->
-
