--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -300,6 +300,7 @@ input[type="text"].invalid:focus, input[type="password"].invalid:focus, textarea
 .window { padding:4px; background: #EEE; border: 1px solid #AAA; margin: 8px;}
 .window .dyta { background: white; }
 
+/* entries */
 #table.entries tr * { border: 1px solid #AAA; padding: 1px 2px; }
 #table.entries tr.odd td{:background: #E3F4FF;}
 #table.entries tr.even td{:background: #A3FCFF;}
@@ -313,8 +314,12 @@ table.dyta tr.pointable.even td{background:#CCF5CC;}
 table.dyta tr.pointable.odd  td{background:#99EB99;}
 table.dyta tr.unpointable.even td{background: #FFCCCC;}
 table.dyta tr.unpointable.odd  td{background: #FF9999;}
-table.dyta tr.pointabled.even td{background:#0066FF;}
-table.dyta tr.pointabled.odd td{background:#0033FF;}
+table.dyta tr.pointabled.even td{background:#FF5B2B;}
+table.dyta tr.pointabled.odd td{background:#FF8830;}
+
+table.dyta tr.total{background:#D28830;}
+table.dyta tr.total td{color:RED;font-family:monospace;}
+
 
 /* undelivered sales  */
 table.dyta tr.odd.advance td{background:#c8ffa0; }
