--- a/app/views/relations/_coordinates_form.html.haml
+++ b/app/views/relations/_coordinates_form.html.haml
@@ -1,5 +1,6 @@
 =formalize do |f|
   -f.title :address
+  -f.field :contact, :default
   -f.field :contact, :line_2
   -f.field :contact, :line_3
   -f.field :contact, :line_4_number
