--- a/app/views/management/_stocks_moves_form.html.haml
+++ b/app/views/management/_stocks_moves_form.html.haml
@@ -4,6 +4,8 @@
   - f.field :stock_move, :name
   - f.field :stock_move, :comment, :field=>:textarea
   - f.title :nature
+  - f.field :stock_move, :virtual
+  - f.field :stock_move, :input
   - f.field :stock_move, :location_id, :choices=>@current_company.stock_locations.find(:all, :order=>:name).collect{|x| [x.name, x.id]}
   - f.field :stock_move, :planned_on
   - f.field :stock_move, :moved_on
