--- a/app/views/relations/_entities_contacts_form.html.haml
+++ b/app/views/relations/_entities_contacts_form.html.haml
@@ -1,4 +1,4 @@
-=render :partial=>"general_description_form"
+=#render :partial=>"general_description_form"
 =render :partial=>"coordinates_form"
  
 
